# C2C

./: .gitignore  README.md  chat_history.html  environment.yml  pyproject.toml
.github/workflows/: fix-qwen-model-paths.yml
bash/ablation/: ablation_study.sh
bash/eval/: run_eval.sh
bash/train/: include_response.sh  sft_train.sh
bash/workflow/: run_workflow_eval.sh
consistency_scripts/: batch_check_consistency.py  check_rosetta_consistency.py  plot_consistency.py
recipe/eval_recipe/: ablation_base.yaml  unified_eval.yaml  workflow_eval.yaml
recipe/train_recipe/: C2C_0.6+0.5.json  C2C_ablation.json  all_in_one.json  baseline_config.json  baseline_lora_config.json  baseline_partial_config.json  include_response.json  oracle.json
rosetta/baseline/: multi_stage.py
rosetta/context/: attention.py  context.py  context_attention.py  contextual.py  selector.py  server.py  track.py  utils.py
rosetta/model/: ablation_projector.py  aligner.py  oracle.py  projector.py  wrapper.py
rosetta/train/: __init__.py  dataset_adapters.py  model_utils.py
rosetta/utils/: core.py  evaluate.py  matheval.py  registry.py
rosetta/workflow/: API.py  actions.py  basic_utils.py  browse_searcher.py  camel_utils.py  contextManage.py  context_prompt.py  display.py  embeddings.py  evaluation.py  ext_actions.py  feedback.py  fewshot.py  fewshot_collect.py  hf_qwen_model.py  oneflow.py  prompt.py  research_flow.py  retriever.py  rules.py  selector.py  singleflow.py  singletool.py  tool_prompt.py  toolflow.py  track.py  tree_prompt.py  treeflow.py
script/ablation/: ablation_study.py
script/analysis/: aggregator_visualization.py  tool_usage_stats.py
script/consistency/: batch_check_consistency.py  check_rosetta_consistency.py  plot_consistency.py  rosetta_consistency_config.json
script/context/: compare_drop_methods.py  contextual_attention_chat_example.py  contextual_chat_example.py  create_ultrachat.py  examples.yaml  launch_server.py  run_sft_contextual.sh  run_sft_ultrachat.sh  sft_contextual.py  sft_standard.py  test_contextual_attention.py
script/dataset/: create_dolly.py  create_gsm8k.py  create_mmlu.py  create_openhermes.py  launch_server.sh  launch_ultrachat_server.sh  qwen3_nonthinking.jinja  run_generation.sh  run_ultrachat_generation.sh  save_dataset.py
script/eval/: eval_chat.py  eval_contextual.py
script/evaluation/: kv_cache_evaluate.py  run_tests.sh  standard_kvcache_del.py  unified_evaluator.py  unified_evaluator_oracle.py
script/examples/: two_stage_example.py  two_stage_rosetta_example.py
script/playground/: contextual_chat_example.py  gradio_demo.py  inference_example.py  live_chat_example.py  sample_response.py  sensitivity_test.py  sensitivity_test_add_cache.py
script/train/: SFT_train.py  generate_configs.py  oracle_train.py  oracle_train_kvcache_mse.py
script/workflow/: README.md  build_search_database.py  evaluation.py  single_research.py  single_tool.py  subagent_research.py  subagent_tool.py  (+2 more)
(+34 files in other folders)
